--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zellis_react_project",
   "version": "0.1.0",
-  "homepage": "https://zellis117.github.io/zellis-moviedb--app",
+  "homepage": "https://zellis117.github.io/Zellis-MovieDB--App",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -18,9 +18,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
